--- a/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
+++ b/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
@@ -169,7 +169,7 @@
                   </GridPane>
                </center>
             </BorderPane>
-            <SplitPane fx:id="loadMembersScreen" dividerPositions="0.29797979797979796" focusTraversable="false" prefHeight="160.0" prefWidth="200.0" visible="false">
+            <SplitPane fx:id="loadMembersScreen" dividerPositions="0.20235756385068762" focusTraversable="false" prefHeight="510.0" prefWidth="566.0" visible="false">
               <items>
                 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="160.0" minWidth="100.0" prefHeight="160.0" prefWidth="100.0" SplitPane.resizableWithParent="false">
                      <children>
@@ -179,7 +179,10 @@
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" SplitPane.resizableWithParent="false">
                      <children>
-                        <TextArea fx:id="loadMemberTexaArea" editable="false" layoutX="-1.0" layoutY="-1.0" prefHeight="511.0" prefWidth="405.0" />
+                        <TextArea fx:id="loadMemberTextArea" editable="false" layoutX="-1.0" layoutY="-1.0" prefHeight="511.0" prefWidth="405.0" wrapText="true">
+                           <font>
+                              <Font size="14.0" />
+                           </font></TextArea>
                      </children>
                   </AnchorPane>
               </items>
