--- a/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
+++ b/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
@@ -19,7 +19,7 @@
 
 <BorderPane fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="600.0" style="-fx-background-color: #ef912e;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gymmanagergui.GymManagerController">
    <left>
-      <Pane prefHeight="533.0" prefWidth="74.0" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="505.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
    </left>
    <top>
       <Pane prefHeight="58.0" prefWidth="378.0" BorderPane.alignment="CENTER">
@@ -33,7 +33,7 @@
       </Pane>
    </top>
    <right>
-      <Pane prefHeight="505.0" prefWidth="45.0" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="505.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
    </right>
    <bottom>
       <Pane prefHeight="42.0" prefWidth="522.0" BorderPane.alignment="CENTER">
@@ -45,7 +45,7 @@
    <center>
       <StackPane fx:id="menuScreens" prefHeight="264.0" prefWidth="363.0" BorderPane.alignment="CENTER">
          <children>
-            <Pane fx:id="startScreen" prefHeight="200.0" prefWidth="200.0">
+            <Pane fx:id="startScreen" prefHeight="200.0" prefWidth="200.0" visible="false">
                <children>
                   <Button fx:id="startButton" contentDisplay="CENTER" layoutX="77.0" layoutY="217.0" mnemonicParsing="false" onMouseClicked="#startGymManager" text="Start Gym Manager">
                      <font>
@@ -61,7 +61,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button fx:id="removeMemberButton" layoutX="270.0" layoutY="58.0" mnemonicParsing="false" onAction="#removeMemberMenu" text="Remove" />
+                  <Button fx:id="removeMemberButton" layoutX="270.0" layoutY="58.0" mnemonicParsing="false" onMouseClicked="#goToRemoveMenu" text="Remove" />
                   <Label alignment="CENTER" layoutX="175.0" layoutY="100.0" text="Check In">
                      <font>
                         <Font size="18.0" />
@@ -161,6 +161,59 @@
                         </Label>
                         <TextField fx:id="addMenuLocation" alignment="CENTER" promptText="Location" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Button fx:id="addMenuBackButton" alignment="TOP_LEFT" mnemonicParsing="false" onMousePressed="#addBackToMenu" text="Back" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </GridPane>
+               </center>
+            </BorderPane>
+            <BorderPane fx:id="memberRemoveMenu" prefHeight="200.0" prefWidth="200.0">
+               <center>
+                  <GridPane alignment="CENTER_LEFT" prefWidth="600.0" BorderPane.alignment="CENTER">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="61.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="109.0" minHeight="10.0" prefHeight="109.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label alignment="CENTER" prefHeight="17.0" prefWidth="261.0" text="First Name">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="removeMenuFirstName" alignment="CENTER" promptText="First Name" GridPane.columnIndex="1" />
+                        <Label alignment="CENTER" prefHeight="17.0" prefWidth="261.0" text="Last Name" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="removeMenuLastName" alignment="CENTER" promptText="Last Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label alignment="CENTER" prefHeight="17.0" prefWidth="261.0" text="Date of Birth" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <DatePicker fx:id="removeMenuDOB" prefHeight="25.0" prefWidth="115.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                        <Button fx:id="removeButton" mnemonicParsing="false" onMouseClicked="#removeMember" text="Remove" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Button>
+                        <TextArea fx:id="removeMemberTextArea" editable="false" prefHeight="200.0" prefWidth="255.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" GridPane.rowSpan="2147483647">
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                        </TextArea>
+                        <Button fx:id="removeMenuBackButton" alignment="TOP_LEFT" mnemonicParsing="false" onMousePressed="#removeBackToMenu" text="Back" GridPane.halignment="LEFT" GridPane.valignment="TOP">
                            <font>
                               <Font size="10.0" />
                            </font>
