--- a/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
+++ b/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -45,7 +48,7 @@
    <center>
       <StackPane fx:id="menuScreens" prefHeight="264.0" prefWidth="363.0" BorderPane.alignment="CENTER">
          <children>
-            <Pane fx:id="startScreen" prefHeight="200.0" prefWidth="200.0" visible="false">
+            <Pane fx:id="startScreen" prefHeight="200.0" prefWidth="200.0">
                <children>
                   <Button fx:id="startButton" contentDisplay="CENTER" layoutX="77.0" layoutY="217.0" mnemonicParsing="false" onMouseClicked="#startGymManager" text="Start Gym Manager">
                      <font>
@@ -88,7 +91,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button layoutX="176.0" layoutY="466.0" mnemonicParsing="false" text="Info Page" />
+                  <Button fx:id="menuInfoButton" layoutX="176.0" layoutY="466.0" mnemonicParsing="false" onMouseClicked="#goToInfo" text="Info Page" />
                   <Button fx:id="addMenuButton" layoutX="117.0" layoutY="58.0" mnemonicParsing="false" onMouseClicked="#memberAddMenu" text="Add" />
                </children>
             </Pane>
@@ -169,7 +172,7 @@
                   </GridPane>
                </center>
             </BorderPane>
-            <BorderPane fx:id="memberRemoveMenu" prefHeight="200.0" prefWidth="200.0">
+            <BorderPane fx:id="memberRemoveMenu" prefHeight="200.0" prefWidth="200.0" visible="false">
                <center>
                   <GridPane alignment="CENTER_LEFT" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <columnConstraints>
@@ -259,6 +262,35 @@
                   </AnchorPane>
                </items>
             </SplitPane>
+            <BorderPane fx:id="loadingMenu" prefHeight="200.0" prefWidth="200.0" visible="false">
+               <center>
+                  <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+                    <tabs>
+                      <Tab fx:id="loadMenuMemInfoTab" text="Member Info">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <ComboBox fx:id="loadMenuMemInfoCombo" layoutX="256.0" layoutY="34.0" onMouseClicked="#loadMenuPrintMethod" prefWidth="124.0" />
+                                    <Label layoutX="70.0" layoutY="29.0" text="Select Info">
+                                       <font>
+                                          <Font size="24.0" />
+                                       </font>
+                                    </Label>
+                                    <TextArea fx:id="loadMenuMemTextArea" editable="false" layoutY="90.0" prefHeight="385.0" prefWidth="512.0" />
+                                    <Button fx:id="informationMemBackButton" layoutX="464.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#informationMemBackToMenu" text="Back" />
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                      <Tab fx:id="loadMenuClassInfoTab" text="Class Info">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                        </content>
+                      </Tab>
+                    </tabs>
+                  </TabPane>
+               </center>
+            </BorderPane>
          </children>
       </StackPane>
    </center>
