--- a/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
+++ b/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
@@ -48,7 +48,7 @@
    <center>
       <StackPane fx:id="menuScreens" prefHeight="264.0" prefWidth="363.0" BorderPane.alignment="CENTER">
          <children>
-            <Pane fx:id="startScreen" prefHeight="200.0" prefWidth="200.0">
+            <Pane fx:id="startScreen" prefHeight="200.0" prefWidth="200.0" visible="false">
                <children>
                   <Button fx:id="startButton" contentDisplay="CENTER" layoutX="77.0" layoutY="217.0" mnemonicParsing="false" onMouseClicked="#startGymManager" text="Start Gym Manager">
                      <font>
@@ -262,7 +262,7 @@
                   </AnchorPane>
                </items>
             </SplitPane>
-            <BorderPane fx:id="loadingMenu" prefHeight="200.0" prefWidth="200.0" visible="false">
+            <BorderPane fx:id="loadingMenu" prefHeight="200.0" prefWidth="200.0">
                <center>
                   <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
                     <tabs>
@@ -270,21 +270,31 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <ComboBox fx:id="loadMenuMemInfoCombo" layoutX="256.0" layoutY="34.0" onMouseClicked="#loadMenuPrintMethod" prefWidth="124.0" />
+                                    <ComboBox fx:id="loadMenuMemInfoCombo" layoutX="256.0" layoutY="34.0" onAction="#infoMenuPrintMethod" prefWidth="124.0" />
                                     <Label layoutX="70.0" layoutY="29.0" text="Select Info">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
                                     <TextArea fx:id="loadMenuMemTextArea" editable="false" layoutY="90.0" prefHeight="385.0" prefWidth="512.0" />
-                                    <Button fx:id="informationMemBackButton" layoutX="464.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#informationMemBackToMenu" text="Back" />
+                                    <Button fx:id="informationMemBackButton" layoutX="470.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#informationMemBackToMenu" text="Back" />
                                  </children>
                               </AnchorPane>
                         </content>
                       </Tab>
                       <Tab fx:id="loadMenuClassInfoTab" text="Class Info">
                         <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <ComboBox fx:id="loadMenuClassInfoCombo" layoutX="256.0" layoutY="34.0" onAction="#infoMenuClassMethod" prefWidth="124.0" />
+                                    <Label layoutX="70.0" layoutY="29.0" text="Select Info">
+                                       <font>
+                                          <Font size="24.0" />
+                                       </font>
+                                    </Label>
+                                    <TextArea fx:id="loadMenuClassTextArea" editable="false" layoutY="90.0" prefHeight="385.0" prefWidth="512.0" />
+                                    <Button fx:id="informationClassBackButton" layoutX="470.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#informationClassBackToMenu" text="Back" />
+                                 </children></AnchorPane>
                         </content>
                       </Tab>
                     </tabs>
