--- a/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
+++ b/src/main/resources/com/example/gymmanagergui/GymManagerView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -75,7 +76,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button layoutX="108.0" layoutY="157.0" mnemonicParsing="false" text="Regular" />
+                  <Button fx:id="menuRegularCheckInButton" layoutX="108.0" layoutY="157.0" mnemonicParsing="false" onMouseClicked="#goToCheckIn" text="Regular" />
                   <Button layoutX="276.0" layoutY="157.0" mnemonicParsing="false" text="Guest" />
                   <Button layoutX="108.0" layoutY="259.0" mnemonicParsing="false" text="Regular" />
                   <Button layoutX="276.0" layoutY="259.0" mnemonicParsing="false" text="Guest" />
@@ -225,6 +226,85 @@
                   </GridPane>
                </center>
             </BorderPane>
+            <BorderPane fx:id="checkInScreen" prefHeight="200.0" prefWidth="200.0">
+               <center>
+                  <GridPane BorderPane.alignment="CENTER">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label alignment="CENTER" contentDisplay="CENTER" text="First Name" GridPane.halignment="CENTER">
+                           <font>
+                              <Font size="36.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="checkInFirstName" alignment="CENTER" promptText="Enter First Name" GridPane.columnIndex="1" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" text="Last Name" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="36.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="checkInLastName" alignment="CENTER" promptText="Enter Last Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <ComboBox fx:id="locationComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="TOP">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </ComboBox>
+                        <Label text="Location" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="instructorComboBox" onAction="#checkInInstructorComboBoxMethod" prefWidth="150.0" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                        <Label text="Instructor" GridPane.rowIndex="3" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <RadioButton fx:id="checkInRegPilates" mnemonicParsing="false" text="Pilates" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <toggleGroup>
+                              <ToggleGroup fx:id="ClassType" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="checkInRegCardio" mnemonicParsing="false" text="Cardio" toggleGroup="$ClassType" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </RadioButton>
+                        <RadioButton fx:id="checkInRegSpinning" mnemonicParsing="false" text="Spinning" toggleGroup="$ClassType" GridPane.columnSpan="2147483647" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </RadioButton>
+                        <Button fx:id="checkInBackButton" mnemonicParsing="false" onMouseClicked="#checkInToMenu" text="Back" GridPane.valignment="TOP" />
+                        <Label text="Date of Birth" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="checkInButton" mnemonicParsing="false" onMouseClicked="#checkInMember" text="Check In" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                        <TextArea fx:id="checkInTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.rowSpan="2147483647" />
+                        <DatePicker fx:id="checkInDOB" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                     </children>
+                  </GridPane>
+               </center>
+            </BorderPane>
             <SplitPane fx:id="loadMembersScreen" dividerPositions="0.20235756385068762" focusTraversable="false" prefHeight="510.0" prefWidth="566.0" visible="false">
               <items>
                 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="160.0" minWidth="100.0" prefHeight="160.0" prefWidth="100.0" SplitPane.resizableWithParent="false">
@@ -262,7 +342,7 @@
                   </AnchorPane>
                </items>
             </SplitPane>
-            <BorderPane fx:id="loadingMenu" prefHeight="200.0" prefWidth="200.0">
+            <BorderPane fx:id="loadingMenu" prefHeight="200.0" prefWidth="200.0" visible="false">
                <center>
                   <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
                     <tabs>
